<resources>
    <string name="app_name">Rants</string>
    <string name="login_header">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
</resources>
