<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Sign up textButton -->
        <Button
            android:id="@+id/sign_up_login_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/login_text"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <!-- Sign up header  -->
        <TextView
            android:id="@+id/sign_up_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="55dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="110dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/login_header"
            />

        <!-- Full Name Rectangle  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_edit_text"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="192dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/full_name"
            android:textColorHint="#6B000000"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:elevation="4dp"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username Rectangle  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edit_text"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="260dp"
            android:layout_centerHorizontal="true"
            android:textColorHint="#6B000000"
            android:hint="@string/username"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:elevation="4dp"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Rectangle  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="328dp"
            android:layout_centerHorizontal="true"
            android:textColorHint="#6B000000"
            android:hint="@string/email_hint"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:elevation="4dp"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Rectangle  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="396dp"
            android:layout_centerHorizontal="true"
            android:textColorHint="#6B000000"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:elevation="4dp"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sign up Button  -->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="468dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:elevation="4dp"
            android:padding="4dp"
            />


    </RelativeLayout>


</ScrollView>